<resources>
    <string name="app_name">Diabetes Tracer App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_logo"> Welcome to Diabetes App</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- New User Information -->
    <string name="new_user_title">Register New User, Please Enter The Following Information.</string>
    <string name="new_user_firstname">First Name : </string>
    <string name="new_user_lastname">Last Name : </string>
    <string name="new_user_password1">password : </string>
    <string name="new_user_password2">password again : </string>
    <string name="new_user_email">Email : </string>
    <string name="new_user_phone">Phone Number: </string>
    <string name="new_user_Address">User Address: </string>
    <string name="new_user_type">Diabetes Type: </string>
    <string name="new_user_birth_date">Birth date: </string>
    <string name="new_user_newImage">default </string>
    <string name="new_user_pick_image">Choose From gallery </string>
    <string name="new_user_register_user"> Register Now </string>
    <string name="new_user_cancel">Cancel </string>
    <string name="title_activity_new__user">"Register New User "</string>
    <string name="title_activity_main">Diabetes Tracer</string>
    <string name="title_activity_send_insulin_dose">Send Insulin dose</string>
    <string name="title_activity_send_meal">Send Meal</string>
    <string name="title_activity_send_medication">Send Medication</string>
    <string name="title_activity_send_blood_sugar">Send Blood Sugar</string>
    <string name="title_activity_send_heart_rate">Send Heart Rate</string>




    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_placeholder">Placeholder Text</string>
    <string name="next_dose_text">until next dose</string>
    <string name="placeholder_time">Placeholder Time</string>
    <string name="placeholder_date">Placeholder Date</string>
    <string name="type">Type:</string>
    <string name="meal_type_hint">Breakfast</string>
    <string name="description">Description</string>
    <string name="meal_description_placeholder">2 scrambled eggs</string>
    <string name="button_send">Send</string>
    <string name="button_take_photo">Take Photo</string>
    <string name="heart_rate">0</string>
    <string name="bpm">bpm</string>
    <string name="setQuantityDose">Click on Icon to add quantity</string>
    <string name="insulin_dose_quantity_dialog">Dose Quantity</string>
    <string name="insulin_dose_quantity_dialog_title">Choose Quanity of Dose</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="insulin_dose_unit">ML</string>
    <string name="setHeartRate">Click on icon to set heart rate</string>
    <string name="heart_rate_quantity_dialog_title">Choose measured Heart Rate</string>
    <string name="heart_rate_quantity_dialog">Heart Rate</string>
    <string name="mmol">mmol/L</string>
    <string name="setBloodSugar">Click on the icon to set blood sugar level</string>
    <string name="blood_sugar_quantity_dialog_title">Choose measured Blood Sugar level</string>
    <string name="blood_sugar_quantity_dialog">Blood Sugar</string>
    <string name="point">.</string>
    <string name="_5">5</string>
    <string name="medication_name">Medication Name</string>

    <string-array name="numbers_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>
    <string-array name="years_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
    </string-array>

</resources>
